k8s/00-namespaces.yaml
# NothingsBland Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: nothingsbland
---
apiVersion: v1
kind: Namespace
metadata:
  name: tryhard
---
apiVersion: v1
kind: Namespace
metadata:
  name: hebron

# What are our services?
# - hebron
#   - PiHole
#   - Private Docker Registry
#   - Mongo
# - tryhard
#   - plex
# - nothingsbland
#   - www
