k8s/30-default-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-default-backend
  labels:
    app: ingress
    role: default-backend
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app: ingress
    role: default-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-default-backend
  labels:
    app: ingress
    role: default-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress
      role: default-backend
  template:
    metadata:
      labels:
        app: ingress
        role: default-backend
    spec:
      containers:
        - image: gcr.io/google_containers/defaultbackend:1.4
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          name: default-backend
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: 30m
              memory: 50Mi
            requests:
              cpu: 30m
              memory: 49Mi
          securityContext:
            runAsUser: 65534
