k8s/90-ingress.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ingress-controller
  namespace: kube-public
  labels:
    app: ingress
    role: public
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress
      role: controller
  template:
    metadata:
      labels:
        app: ingress
        role: controller
    spec:
      serviceAccountName: ingress-serviceaccount
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.20.0
          args:
            - /nginx-ingress-controller
            - --configmap=$(POD_NAMESPACE)/ingress-configuration
            - --publish-service=$(POD_NAMESPACE)/ingress
            - --annotations-prefix=nginx.ingress.kubernetes.io
            - --tcp-services-configmap=$(POD_NAMESPACE)/ingress-tcp-services
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            # www-data -> 33
            runAsUser: 33
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: kube-public
  labels:
    app: ingress
    role: controller
spec:
  type: NodePort
  selector:
    app: ingress
    role: controller
  ports: 
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  - name: https
    port: 443
    targetPort: https
    protocol: TCP
  externalIPs:
  - 10.0.0.10   # black-pearl (entry point?)
---
