k8s/50-nothingsbland.com.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: nothingsbland
  name: www
  annotations:
    certmanager.k8s.io/issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
  labels:
    app: www
spec:
  rules:
    - host: nothingsbland.com
      http:
        paths:
          - backend:
              serviceName: www
              servicePort: 80
            path: /
    - host: www.nothingsbland.com
      http:
        paths:
          - backend:
              serviceName: www
              servicePort: 80
            path: /
  tls:
    - hosts:
        - nothingsbland.com
        - www.nothingsbland.com
      secretName: nothingsbland-com-tls
---
apiVersion: v1
kind: Service
metadata:
  namespace: nothingsbland
  labels:
    app: www
  name: www
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: www
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nothingsbland
  name: www
  labels:
    app: www
spec:
  replicas: 1
  selector:
    matchLabels:
      app: www   
  template:
    metadata:
      labels:
        app: www
    spec:
      nodeSelector:
        kubernetes.io/hostname: flying-dutchman.sea   
      containers:
        - name: www
          image: nothingsbland/www:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "100M"      # 100 MB
              cpu: "1m"           # .001 CPU (smallest unit possible)
            limits:               
              memory: "100M"      # 100 MB
              cpu: "1m"           # .001 CPU (smallest unit possible)
          volumeMounts:
          - mountPath: /apps/nothingsbland/logs
            name: logs
            readOnly: false
      volumes:
      - name: logs
        persistentVolumeClaim:
          claimName: nothingsbland-logs
