k8s/50-pihole.sea.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: hebron
  name: pihole
  labels:
    app: pihole
spec:
  rules:
  # It would be cool to use DNS Resolver for host but it doesn't work.
    - host: pihole.sea 
      http:
        paths:
          - backend:
              serviceName: pihole
              servicePort: 8080
            path: /
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: hebron
spec:
  selector:
    app: pihole
  # Must use NodePort to expose service to external ip. 
  # Hate doing it, but needed for 53 ports.
  type: NodePort
  ports: 
  - name: http        # Web Interface
    protocol: TCP
    port: 8080        # Server Port
    targetPort: 80    # Pod Port
  - name: dns-tcp
    protocol: TCP
    port: 53
    targetPort: 53
  - name: dns-udp
    protocol: UDP
    port: 53
    targetPort: 53
  externalIPs:
  - 10.0.0.10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: hebron
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      hostname: pihole
      nodeSelector:
        kubernetes.io/hostname: black-pearl.sea   
      containers:
      - name: pihole
        image: pihole/pihole:4.3_amd64
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 53
          protocol: TCP
        - containerPort: 53
          protocol: UDP
        resources:
          requests:
            memory: "256Mi"     # 256mb
            cpu: "200m"         # 1/5 CPU
          limits:               
            memory: "384Mi"     # 384mb
            cpu: "444m"         # 2.25/5 CPU
