k8s/50-registry.sea.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry
  namespace: hebron
  labels:
    app: registry
spec:
  rules:
  # It would be cool to use DNS Resolver for host but it doesn't work.
    - host: registry.sea 
      http:
        paths:
          - backend:
              serviceName: registry
              servicePort: 80
            path: /
---
apiVersion: v1
kind: Service
metadata:
  namespace: hebron
  labels:
    app: registry
  name: registry
spec:
  selector:
    app: registry
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: hebron
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      hostname: registry
      nodeSelector:
        kubernetes.io/hostname: black-pearl.sea
      containers:
      - name: registry
        image: hebron-registry:0.1.0
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 5000
            protocol: TCP
        resources:
         requests:
           memory: "500M"      
           cpu: "100m"        
         limits:               
           memory: "500M"      
           cpu: "100m"         
        volumeMounts:
        - name: data
          mountPath: /var/lib/registry
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: registry
