k8s/50-tryhard.tv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: tryhard
  name: plex
  annotations:
    certmanager.k8s.io/issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
  labels:
    app: plex
spec:
  rules:
    - host: tryhard.tv
      http:
        paths:
          - backend:
              serviceName: plex
              servicePort: 32400
            path: /
    - host: www.tryhard.tv
      http:
        paths:
          - backend:
              serviceName: plex
              servicePort: 32400
            path: /
  tls:
    - hosts:
        - tryhard.tv
        - www.tryhard.tv
      secretName: tryhard-tv-tls
---
apiVersion: v1
kind: Service
metadata:
  namespace: tryhard
  labels:
    app: plex
  name: plex
spec:
  type: NodePort
  selector:
    app: plex
  ports:
    - port: 32400
      targetPort: www
  externalIPs:
  - 10.0.0.11	  # Node IP Address      
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tryhard
  name: plex
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex   
  template:
    metadata:
      labels:
        app: plex
    spec:
      hostname: davy-jones-media
      nodeSelector:
        kubernetes.io/hostname: flying-dutchman.sea   
      containers:
        - name: plex
          image: plexinc/pms-docker:1.15.6.1079-78232c603
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 1900    # (for access to the Plex DLNA Server)
            protocol: UDP
          - containerPort: 3005    # (for controlling Plex Home Theater via Plex Companion)
            protocol: TCP
          - containerPort: 8324    # (for controlling Plex for Roku via Plex Companion)
            protocol: TCP
          - name: www
            containerPort: 32400   # (for current GDM network discovery)
            protocol: TCP
          - containerPort: 32410   # (for current GDM network discovery)
            protocol: UDP
          - containerPort: 32412   # (for current GDM network discovery)
            protocol: UDP
          - containerPort: 32413   # (for current GDM network discovery)
            protocol: UDP
          - containerPort: 32414   # (for current GDM network discovery)
            protocol: UDP
          - containerPort: 32469   # (for access to the Plex DLNA Server)
            protocol: TCP
          resources:
            requests:
              memory: "5140Mi"    # 5140 MB (5 GB)
              cpu: "3000m"        # 3.0 CPU
            limits:               
              memory: "6168Mi"    # 6168 MB (6 GB)
              cpu: "3750m"        # 3.75 CPU
          volumeMounts:
          - name: data
            mountPath: /data
          - name: transcode
            mountPath: /transcode
          - name: config
            mountPath: /config
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: plex-media
      - name: transcode
        persistentVolumeClaim:
          claimName: plex-transcode
      - name: config
        persistentVolumeClaim:
          claimName: plex-config
